--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,7 @@
     <h1>Página vendas</h1>
     <p>Vendas = R$ 5000.00</p>
     <a href="index.html">Voltar para pagina inicial</a>
+    <a href="blog.html"> Ir para o blog do site</a>
 </body>
 </body>
 </html>
