Atualizado pagina do blog

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Página de blog</h1>
     <h2>Pirmeiro Post</h2>
+    <p>Bem vindo ao nosso blog</p>
     <h2>Segundo Post</h2>
+    <p>Aqui só tem bagulho maneiro</p>
 </body>
 </body>
 </html>
